IMPALA-6419: Revert "IMPALA-6383: free memory after skipping parquet row groups"

This reverts commit 10fb24afb966c567adcf632a314f6af1826f19fc.

Change-Id: I4dd62380d02b61ca46f856b4eb40670b71e28140
Reviewed-on: http://gerrit.cloudera.org:8080/9054
Reviewed-by: Alex Behm <alex.behm@cloudera.com>
Tested-by: Impala Public Jenkins